# unshit-agentic-terminal-manager

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FRAMEWORK_CHANGES.md  LICENSE  README.md  REVIEW.md  SPEC-129-pty-resize-reflow.md  SPEC.md  app.js  build.rs  index.html  patch_view.py  settings-theme-preview.html  styles.css
.cargo/: config.toml
Unshit Terminal Design System/: README.md  SKILL.md
assets/: styles.css  themes.json
benches/: pty_write.rs  quick_prompt_filter.rs
crates/unshit-framework/crates/unshit/: Cargo.toml
crates/unshit-framework/crates/unshit-app/: Cargo.toml
crates/unshit-framework/crates/unshit-app/src/: animation_waker.rs  app.rs  clipboard.rs  event_sink.rs  font.rs  frame_pacer.rs  frame_probe.rs  input_latency.rs  lib.rs  notification.rs  runtime.rs  scroll_motion.rs  shortcut.rs  subscription.rs  window.rs
crates/unshit-framework/crates/unshit-app/tests/: custom_fonts.rs  frame_pacer_window_integration.rs
crates/unshit-framework/crates/unshit-bench/: Cargo.toml
crates/unshit-framework/crates/unshit-bench/benches/: frame_arena.rs  hit_test.rs  reconcile.rs  style_cascade.rs
crates/unshit-framework/crates/unshit-bench/src/: lib.rs
crates/unshit-framework/crates/unshit-core/: Cargo.toml
crates/unshit-framework/crates/unshit-core/src/: build.rs  cell_grid.rs  cursor.rs  damage.rs  dirty.rs  element.rs  event.rs  frame_arena.rs  grid_font.rs  id.rs  input.rs  layout.rs  lib.rs  reconcile.rs  scroll.rs  shortcut.rs  toast.rs  trace.rs  tree.rs
crates/unshit-framework/crates/unshit-core/src/style/: animation.rs  cascade.rs  mod.rs  motion.rs  parse.rs  pseudo.rs  theme.rs  transition.rs  types.rs
crates/unshit-framework/crates/unshit-core/src/svg/: attrs.rs  mod.rs  path_parser.rs  types.rs
crates/unshit-framework/crates/unshit-core/tests/: nav_parse_debug.rs  token_scopes.rs
crates/unshit-framework/crates/unshit-renderer/: Cargo.toml
crates/unshit-framework/crates/unshit-renderer/src/: atlas.rs  batch.rs  canvas.rs  double_buffered.rs  dw_rasterizer.rs  gpu.rs  grid_fragment_upload.rs  image_cache.rs  instance_buffer_pool.rs  lib.rs  line_quad_cache.rs  svg_tess.rs  text_rendering.rs
crates/unshit-framework/crates/unshit-renderer/src/pipeline/: backdrop_blur.rs  grid_fragment.rs  grid_fragment_pass.rs  image.rs  mod.rs  quad.rs  svg.rs  text.rs
crates/unshit-framework/crates/unshit-renderer/src/shaders/: backdrop_blur.wgsl  grid_fragment.wgsl  image.wgsl  quad.wgsl  quad_software.wgsl  svg.wgsl  text.wgsl  text_debug_solid.wgsl  text_subpixel.wgsl
crates/unshit-framework/crates/unshit-renderer/tests/: double_buffered_bounded.rs  grid_fragment_smoke.rs  instance_pool_integration.rs
crates/unshit-framework/crates/unshit-test/: Cargo.toml
crates/unshit-framework/crates/unshit-test/src/: actions.rs  assertions.rs  harness.rs  input.rs  lib.rs  locator.rs  os_input.rs  query.rs  render.rs  replay.rs  report.rs  selector.rs  test_app.rs  trace.rs  windowed.rs
crates/unshit-framework/crates/unshit-test/tests/: absolute_bottom_pinning.rs  actions.rs  anonymous_text.rs  assertions.rs  backdrop_filter.rs  bell_notification.rs  block_default.rs  box_shadow_stacked.rs  cell_grid.rs  css_variables.rs  cursor_and_outline.rs  debug_blink.rs  double_click_right_click.rs  focus.rs  focus_visible.rs  focus_within.rs  font_face_css.rs  frame_arena.rs  frame_corner_decoration.rs  gpu_harness.rs  grid_layout.rs  hover.rs  hover_blink_repro.rs  hover_cascade_debug.rs  hover_within_button.rs  input_type.rs  integration.rs  keyboard_capture.rs  layout.rs  locator.rs  macro_onclick.rs  mask_image_fade.rs  memo_reconcile.rs  nav_space_between_regression.rs  persistent_buffer.rs  pseudo_layout.rs  radial_gradient_render.rs  reconcile.rs  render_stability.rs  repeating_linear_gradient.rs  (+21 more)
crates/unshit-framework/crates/unshit-test/tests/recordings/: hover_session.json
crates/unshit-framework/crates/unshit/examples/: async_counter.rs  async_spawn.rs  async_subscriptions.rs  canvas.rs  claude_code.rs  feature_showcase.rs  kitchen_sink.rs  scroll_demo.rs  stress_text.rs  terminal_manager.rs  terminal_manager_icons.rs
crates/unshit-framework/crates/unshit/examples/assets/terminal_manager/: README.txt  styles.css
crates/unshit-framework/crates/unshit/src/: lib.rs
crates/unshit-framework/crates/unshit/tests/: terminal_manager_interactivity.rs
crates/unshit-macros/: Cargo.toml
crates/unshit-macros/src/: lib.rs  ui_test.rs  view.rs
crates/unshit-ptyd/: Cargo.toml
crates/unshit-ptyd/src/: lib.rs  main.rs  memory.rs
crates/unshit-ptyd/src/client/: mod.rs
crates/unshit-ptyd/src/daemon/: handler.rs  mod.rs
crates/unshit-ptyd/src/protocol/: codec.rs  error.rs  frame.rs  message.rs  mod.rs
crates/unshit-ptyd/src/pty/: mod.rs
crates/unshit-ptyd/src/session/: mod.rs  registry.rs
crates/unshit-ptyd/src/transport/: mod.rs  pipe_windows.rs  socket_unix.rs
crates/unshit-ptyd/tests/: crash_isolation.rs  ipc_attach_after_detach.rs  ipc_attach_snapshot.rs  ipc_client_survives_server_drop.rs  ipc_framing.rs  ipc_hello.rs  ipc_session_cleanup_on_disconnect.rs  ipc_session_kill.rs  ipc_session_multiple_on_one_connection.rs  ipc_session_rename.rs  ipc_session_spawn.rs  ipc_session_survives_disconnect.rs  ipc_session_write_read.rs  ipc_shutdown.rs  ipc_single_instance.rs
crates/unshit-ptyd/tests/common/: mod.rs
crates/unshit-terminal-core/: Cargo.toml
crates/unshit-terminal-core/src/: cell.rs  color.rs  grid.rs  lib.rs  scrollback.rs  snapshot.rs  terminal.rs
crates/unshit-terminal-core/tests/: integration.rs
xtask/: Cargo.toml
xtask/src/: args.rs  main.rs  profile.rs
xtask/src/desktop_regression/: artifacts.rs  assertions.rs  diagnostics.rs  environment.rs  failure.rs  interactive.rs  launcher.rs  logging.rs  mod.rs  options.rs  registry.rs  replay.rs  results.rs  runner.rs  screenshots.rs  win32.rs
xtask/src/desktop_regression/suites/: edge_resize_stability.rs  mod.rs  observability.rs  post_resize_glitches.rs  settings_scroll.rs  split_divider_stability.rs  titlebar_window_controls.rs
(+297 files in other folders)
