[package]
name = "terminal-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
unshit = { path = "../../../../unshit-rust-framework/crates/unshit", features = ["async", "clipboard"] }
cosmic-text = "0.12"
portable-pty = "0.8"
vte = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
log = "0.4"
env_logger = "0.11"
smallvec = "1.13"
dirs = "5"
