[workspace]
resolver = "2"
members = [
    "crates/unshit-framework/crates/*",
    "crates/unshit-ptyd",
    "crates/unshit-terminal-core",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/alangmartini/unshit-rust-framework"
readme = "README.md"
keywords = ["gui", "ui", "wgpu", "gpu", "framework"]
categories = ["gui", "rendering"]

[workspace.dependencies]
winit = "0.31.0-beta.2"
wgpu = "24.0"
taffy = "0.7"
cssparser = "0.34"
cosmic-text = "0.12"
lyon = "1.0"
bumpalo = { version = "3.16", features = ["collections"] }
smallvec = "1.13"
rustc-hash = "2.1"
bytemuck = { version = "1.21", features = ["derive"] }
bitflags = "2"
log = "0.4"
env_logger = "0.11"
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flume = "0.11"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-stream = "0.1"
futures-core = "0.3"
async-stream = "0.3"
arboard = "3"
dwrote = { version = "0.11", default-features = false }
winapi = { version = "0.3", features = ["wingdi", "windef"] }

[workspace.lints.clippy]
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
cloned_instead_of_copied = "allow"
manual_let_else = "allow"
semicolon_if_nothing_returned = "allow"
inconsistent_struct_constructor = "allow"
excessive_precision = "allow"
redundant_closure = "allow"
type_complexity = "allow"
field_reassign_with_default = "allow"
too_many_arguments = "allow"
should_implement_trait = "allow"
manual_div_ceil = "allow"
derivable_impls = "allow"
manual_is_multiple_of = "allow"
match_like_matches_macro = "allow"
manual_next_back = "allow"
format_in_format_args = "allow"
new_without_default = "allow"
manual_memcpy = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
single_match = "allow"
needless_borrows_for_generic_args = "allow"
useless_vec = "allow"
clone_on_copy = "allow"
identity_op = "allow"
unnecessary_sort_by = "allow"
write_with_newline = "allow"
unnecessary_map_or = "allow"

[workspace.lints.rust]
unknown_lints = "allow"

[workspace.lints.rustdoc]
overindented_list_items = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2

[package]
name = "terminal-manager"
version = "0.1.0"
edition = "2021"

[features]
input-latency-histogram = ["unshit/input-latency-histogram"]
profiling = ["dep:dhat"]

[lints]
workspace = true

[dependencies]
unshit = { path = "crates/unshit-framework/crates/unshit", features = ["async", "clipboard"] }
unshit-ptyd = { path = "crates/unshit-ptyd" }
unshit-terminal-core = { path = "crates/unshit-terminal-core" }
cosmic-text = "0.12"
portable-pty = "0.8"
vte = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-core = "0.3"
log = "0.4"
env_logger = "0.11"
smallvec = "1.13"
dirs = "5"
rfd = "0.15"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { workspace = true }
dhat = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pty_write"
harness = false
