[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
getrandom = "0.3"
sha2 = "0.10"
terminal-manager-diagnostics = { path = "../crates/terminal-manager-diagnostics" }

[target.'cfg(windows)'.dependencies]
image = { workspace = true }
winapi = { workspace = true, features = [
    "errhandlingapi",
    "minwindef",
    "windef",
    "wingdi",
    "winuser",
] }
