[package]
name = "unshit-app"
description = "Windowing, event loop, and app lifecycle for the unshit UI framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
unshit-core = { version = "0.1.0", path = "../unshit-core" }
unshit-renderer = { version = "0.1.0", path = "../unshit-renderer" }
winit = { workspace = true }
taffy = { workspace = true }
cosmic-text = { workspace = true }
pollster = "0.4"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flume = { workspace = true }
arboard = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
notify = { version = "6", optional = true }
hdrhistogram = { version = "7.5", optional = true }

[features]
default = ["clipboard", "hot-reload"]
clipboard = ["dep:arboard"]
async = ["dep:tokio", "dep:tokio-stream", "dep:futures-core"]
notifications = []
hot-reload = ["dep:notify"]
input-latency-histogram = ["dep:hdrhistogram"]

[dev-dependencies]
tokio = { workspace = true }
async-stream = { workspace = true }
futures-core = { workspace = true }
