[package]
name = "unshit-core"
description = "Core CSS parsing, style cascade, layout engine, and element tree for the unshit UI framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
cssparser = { workspace = true }
taffy = { workspace = true }
cosmic-text = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
