[package]
name = "unshit-renderer"
description = "wgpu-based GPU renderer, text shaping, and canvas API for the unshit UI framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
unshit-core = { version = "0.1.0", path = "../unshit-core" }
wgpu = { workspace = true }
winit = { workspace = true }
cosmic-text = { workspace = true }
lyon = { workspace = true }
bytemuck = { workspace = true }
rustc-hash = { workspace = true }
log = { workspace = true }
image = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = { workspace = true }
winapi = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }

[features]
default = []
# Fallback for adapters where `Queue::on_submitted_work_done` is
# unreliable (observed on some D3D12 drivers). When enabled the renderer
# recycles pooled instance buffers via a ring of `desired_maximum_frame_latency + 1 = 3`
# slots keyed by a frame counter instead of the callback path.
instance-pool-ring-fallback = []
# Experimental single pass fragment shader grid renderer. When enabled, the
# renderer compiles in an alternative pipeline that uploads the cell grid as
# a storage buffer (SSBO) and draws one full screen triangle. The fragment
# stage computes the cell index from `gl_FragCoord` and samples the glyph
# atlas directly. Off by default; enable with `--features grid-fragment-shader`
# and the runtime flag `TM_USE_GRID_FRAGMENT_SHADER=1` to route
# `ElementContent::Grid` through the new path. The instanced text path stays
# intact as the unconditional fallback.
grid-fragment-shader = []
